--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               </h2>
             </header>
             <a class="image fit"
-              ><img src="images/powerBI.jpg" alt=""
+              ><img src="images/PowerBI.JPG" alt=""
             /></a>
             <p>
               Data Professional Survey Breakdown.
