--- a/index.html
+++ b/index.html
@@ -152,19 +152,19 @@
           <article>
             <header>
               <h2>
-                <a 
+                <a href="https://github.com/alex55515/PortofolioProjects/blob/main/Power%20BI%20Project.pbix"
                   >POWER BI</a
                 >
               </h2>
             </header>
-            <a class="image fit"
+            <a href="https://github.com/alex55515/PortofolioProjects/blob/main/Power%20BI%20Project.pbix" class="image fit"
               ><img src="images/PowerBI.JPG" alt=""
             /></a>
             <p>
               Data Professional Survey Breakdown.
             </p>
             <ul class="actions special">
-              <li><a class="button">VIEW PROJECT</a></li>
+              <li><a href="https://github.com/alex55515/PortofolioProjects/blob/main/Power%20BI%20Project.pbix" class="button">VIEW PROJECT</a></li>
             </ul>
           </article>
           <article>
